css/cactu.css
/* ... */
@media screen and (prefers-reduced-motion: reduce) {
  .dropleft .toggle:before {
    transition: none;
  }
}

.dropleft .drop-menu {
  left: -12.625rem;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]),
select,
textarea {
  color: #343a40;
  padding: 0.375rem 0.75rem;
  border: 1px solid #dee2e6;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
  background-color: #fff;
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

@media screen and (prefers-reduced-motion: reduce) {
  input:not([type="checkbox"]):not([type="radio"]):not([type="range"]),
  select,
  textarea {
    transition: none;
  }
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]):focus,
select:focus,
textarea:focus {
  outline: 0;
  border-color: #007bff;
  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.075), 0 0 0 0.125rem rgba(0, 123, 255, 0.25);
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]):-ms-input-placeholder,
select:-ms-input-placeholder,
textarea:-ms-input-placeholder {
  color: #6c757d;
  opacity: 1;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"])::placeholder,
select::placeholder,
textarea::placeholder {
  color: #6c757d;
  opacity: 1;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]):disabled,
select:disabled,
textarea:disabled {
  color: #838f9b;
  background-color: #e9ecef;
  cursor: not-allowed;
  opacity: .57;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"])[readonly],
select[readonly],
textarea[readonly] {
  background-color: #e9ecef;
  opacity: 1;
}

input[type="range"]:focus {
  outline: none;
}

input[type="range"]::-moz-focus-outer {
  border: 0;
}

select:not([size]):not([multiple]) {
  height: calc(2.25rem + 2px);
  padding: .375rem 1.75rem .375rem .75rem;
  background: #fff url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3E%3Cpath fill='%23343a40' d='M2 0L0 2h4zm0 5L0 3h4z'/%3E%3C/svg%3E") no-repeat right 0.75rem center;
  background-size: 8px 10px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

select:not([size]):not([multiple]):disabled {
  background-color: #e9ecef;
}

select:not([size]):not([multiple])::-ms-value {
  color: #343a40;
  background-color: #fff;
}

select:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #343a40;
}

select::-ms-expand {
  opacity: 0;
}

.form-group {
  margin-bottom: 1rem;
}

.form-group input,
.form-group select,
.form-group textarea {
  width: 100%;
}

.form-group [type="checkbox"],
.form-group [type="radio"] {
  display: inline;
  width: .8125rem;
  height: 1rem;
  margin-right: .125rem;
}

.form-group .help,
.form-group [class$="-feedback"] {
  display: block;
  font-size: 0.75rem;
  margin-top: 0.25rem;
}

.form-group .checkbox:not(:last-child),
.form-group .radio:not(:last-child) {
  margin-right: 1rem;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]):not([type="file"]).valid,
select.valid,
textarea.valid {
  border: 1px solid #28a745;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]):not([type="file"]).valid:focus,
select.valid:focus,
textarea.valid:focus {
  border-color: #28a745;
  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.075), 0 0 0 0.125rem rgba(40, 167, 69, 0.25);
}

.form-group .valid-feedback {
  color: #28a745;
}

.form-group .checkbox.valid,
.form-group .radio.valid {
  color: #28a745;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]):not([type="file"]).invalid,
select.invalid,
textarea.invalid {
  border: 1px solid #dc3545;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="range"]):not([type="file"]).invalid:focus,
select.invalid:focus,
textarea.invalid:focus {
  border-color: #dc3545;
  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.075), 0 0 0 0.125rem rgba(220, 53, 69, 0.25);
}

.form-group .invalid-feedback {
  color: #dc3545;
}

.form-group .checkbox.invalid,
.form-group .radio.invalid {
  color: #dc3545;
}

.form-columns {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.form-columns .column,
.form-columns [class*="column-of-"] {
  padding: 0 .5rem;
}

.form-columns .column:first-child,
.form-columns [class*="column-of-"]:first-child {
  padding-left: 0;
}

.form-columns .column:last-child,
.form-columns [class*="column-of-"]:last-child {
  padding-right: 0;
}

@media screen and (max-width: 575px) {
  .form-columns .column,
  .form-columns [class*="column-of-"] {
    padding: 0;
  }
}

.container {
  width: 100%;
  margin: 0 auto;
  position: relative;
}

@media (min-width: 960px) and (max-width: 1199px) {
  .container {
    width: 960px;
  }
}

@media (min-width: 1200px) and (max-width: 1343px) {
  .container {
    width: 1200px;
  }
}

@media screen and (min-width: 1344px) {
  .container {
    width: 1344px;
  }
}

.columns {
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0;
}

.columns .columns {
  padding: 0;
}

.column {
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.column[class*="column-of-"] {
  -ms-flex-preferred-size: inherit;
  flex-basis: inherit;
}

.column,
[class*="column-of-"] {
  padding: 0 15px;
  min-height: 1px;
}

@media (min-width: 576px) and (max-width: 1199px) {
  .column,
  [class*="column-of-"] {
    padding: 0 10px;
  }
}

.column-of-1 {
  width: 8.33333%;
}

.column-of-2 {
  width: 16.66667%;
}

.column-of-3 {
  width: 25%;
}

.column-of-4 {
  width: 33.33333%;
}

.column-of-5 {
  width: 41.66667%;
}

.column-of-6 {
  width: 50%;
}

.column-of-7 {
  width: 58.33333%;
}

.column-of-8 {
  width: 66.66667%;
}

.column-of-9 {
  width: 75%;
}

.column-of-10 {
  width: 83.33333%;
}

.column-of-11 {
  width: 91.66667%;
}

.column-of-12 {
  width: 100%;
}
/* ... */

